; ModuleID = '/home/carl/AnghaBench/RetroArch/runahead/extr_mem_util.c_strcpy_alloc_force.c'
source_filename = "/home/carl/AnghaBench/RetroArch/runahead/extr_mem_util.c_strcpy_alloc_force.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @strcpy_alloc_force(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i8* @strcpy_alloc(i8* %5)
  store i8* %6, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = call i64 @calloc(i32 1, i32 1)
  %11 = inttoptr i64 %10 to i8*
  store i8* %11, i8** %2, align 8
  br label %14

12:                                               ; preds = %1
  %13 = load i8*, i8** %4, align 8
  store i8* %13, i8** %2, align 8
  br label %14

14:                                               ; preds = %12, %9
  %15 = load i8*, i8** %2, align 8
  ret i8* %15
}

declare dso_local i8* @strcpy_alloc(i8*) #1

declare dso_local i64 @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
